Set version.java to 21 and added frgaal plugin to compile to Java 11.