@@ -20,7 +20,7 @@
 
 		<!-- MAVEN AND JAVA VERSIONS -->
 		<version.maven>3.8.7</version.maven>
-		<version.java>11</version.java>
+		<version.java>21</version.java>
 
 		<!-- DEPENDENCIES -->
 		<!-- primary swingset-demo dependencies -->
@@ -128,6 +128,32 @@
 				<artifactId>versions-maven-plugin</artifactId>
 				<version>${version.versions-maven-plugin}</version>
 			</plugin>
+			
+						<!-- Added from https://github.com/eppleton/frgaal -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>${version.maven-compiler-plugin}</version>
+				<dependencies>
+					<dependency>
+						<groupId>org.frgaal</groupId>
+						<artifactId>compiler-maven-plugin</artifactId>
+						<version>21.0.0</version>
+					</dependency>
+				</dependencies>
+				<configuration>
+					<compilerId>frgaal</compilerId>
+					<source>21</source>
+					<target>11</target>
+					<compilerArgs>
+						<arg>-Xlint:deprecation</arg>
+						<!--only needed when using preview language features-->
+						<!-- <arg>- -enable-preview</arg> -->
+						<arg>--enable-preview</arg>
+					</compilerArgs>
+				</configuration>
+			</plugin>
+			
 			<!-- Maven Enforcer forces specified version of Java and Maven -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -196,6 +222,7 @@
 				<version>${version.maven-surefire-plugin}</version>
 			</plugin>
 
+			<!-- Included above with frgaal
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -205,6 +232,8 @@
 					<release>${version.java}</release>
 				</configuration>
 			</plugin>
+			-->
+			
 		</plugins>
 	</build>
 
